# un7z

./: .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  BENCHMARKS.md  CAPABILITY_PROBES.md  COMPATIBILITY.md  CORPUS.md  Cargo.toml  DEPENDENCIES.md  ERRORS.md  FUZZING.md  NOTICE  PHASE_PLAN.md  PROVENANCE.md  README.md  SECURITY.md  TESTING.md  THREAT_MODEL.md  deny.toml
.github/workflows/: ci.yml  python.yml
bindings/python/: AGENTS.md  Cargo.toml  LICENSE  LICENSE-MIT  LICENSE-NETBSD-ZOPEN-BSD-3-CLAUSE  LICENSE-STANGELANDCL-PPMD-MIT  NOTICE  README.md  deny.toml  pyproject.toml
bindings/python/python/un7z/: __init__.py  _native.pyi
bindings/python/src/: archive.rs  callback.rs  config.rs  errors.rs  lib.rs  metadata.rs  stream.rs
bindings/python/tests/: test_bindings.py
crates/un7z/: Cargo.toml
crates/un7z-cli/: Cargo.toml
crates/un7z-cli/src/: main.rs
crates/un7z/benches/: natural_order_solid.rs
crates/un7z/examples/: extract_entry_to.rs  list.rs  open_volumes.rs  stream_member.rs
crates/un7z/src/: archive.rs  bounded.rs  cancel.rs  checksum.rs  coder_properties.rs  error.rs  execute.rs  graph.rs  lib.rs  limits.rs  metadata.rs  model.rs  parse_util.rs  parser.rs  password.rs  path.rs  raw.rs  validate.rs  volume.rs
crates/un7z/src/decode/: aes.rs  codecs.rs  deflate64.rs  filters.rs  lzma.rs  mod.rs  phase5_filters.rs  ppmd.rs
crates/un7z/src/stream/: cursor.rs  lz4.rs  mod.rs  unix_compress.rs  zstandard.rs
crates/un7z/tests/: capability_probe.rs  generated_oracle.rs  phase2_model.rs  phase3_reference.rs  phase4_reference.rs  phase5_reference.rs  phase6_api.rs  ppmd_compatibility.rs  reference_headers.rs  stream_formats.rs
docs/adr/: 0001-trust-boundaries-dependencies-and-provenance.md  0002-stable-api-and-resource-accounting.md  0003-python-ffi-and-packaging.md  0004-standalone-compressed-streams.md
fuzz/: Cargo.toml  deny.exceptions.toml
fuzz/fuzz_targets/: decoding.rs  header_envelope.rs  next_header.rs  path_validation.rs  stream_formats.rs  support.rs  validated_graph.rs  volumes.rs
fuzz/tests/: generated_seeds.rs
reference/: go-testdata.sha256
