[workspace]
members = ["crates/un7z", "crates/un7z-cli"]
exclude = ["bindings/python", "fuzz"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
expect_used = "deny"
indexing_slicing = "deny"
panic = "deny"
unwrap_used = "deny"

[workspace.lints.rustdoc]
bare_urls = "warn"
broken_intra_doc_links = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
overflow-checks = true
panic = "unwind"
strip = "symbols"

[profile.test]
overflow-checks = true
