[package]
name = "un7z-python"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Python bindings for the security-focused unpack-only un7z and stream core"
readme = "README.md"
publish = false

[lib]
name = "_native"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "=0.29.0", default-features = false, features = ["abi3-py39", "macros"] }
un7z = { path = "../../crates/un7z", version = "=0.1.0" }
zeroize = { version = "=1.9.0", default-features = false, features = ["alloc"] }

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
expect_used = "deny"
indexing_slicing = "deny"
panic = "deny"
unwrap_used = "deny"

[lints.rustdoc]
bare_urls = "warn"
broken_intra_doc_links = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
overflow-checks = true
panic = "unwind"
strip = "symbols"

[profile.test]
overflow-checks = true
