[build-system]
requires = ["maturin==1.13.3"]
build-backend = "maturin"

[project]
name = "un7z"
version = "0.1.0"
description = "Security-focused, unpack-only 7z and compressed-stream reader"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE*", "NOTICE"]
authors = []
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "Topic :: System :: Archiving :: Compression",
]

[tool.maturin]
bindings = "pyo3"
features = ["extension-module"]
module-name = "un7z._native"
python-source = "python"
strip = true
